--- a/style.css
+++ b/style.css
@@ -231,3 +231,36 @@ font-size: 12px;
 color: white;
 }
 
+#skills {
+  padding: 40px;
+  background-color: #f9f9f9;
+}
+
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.skill-category {
+  width: 45%;
+  margin-bottom: 20px;
+}
+
+.skill-category h3 {
+  text-align: center;
+margin-top: 3em;
+margin-bottom: 1em;
+font-size: 36px;
+}
+
+.skill-category ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.skill-category li {
+  font-size: 1.2em;
+  margin-bottom: 5px;
+}
+
